--- a/generator.html
+++ b/generator.html
@@ -532,13 +532,13 @@
         alert("nextTurn initated");
         var allColonies = $$('#system1 .planet.colony');
         var allMiningPlanets = $$('#system1 .planet.miningStation');
-        var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) + allColonies.length * 2;
-        HUDAuthorityNumber.innerText = newAuthorityNumber;
         var newCreditNumber = Number(HUDCreditNumber.innerText) - allColonies.length * 10;
         HUDCreditNumber.innerText = newCreditNumber;
         for (const pEl of allColonies) {
           var newPopNumber = pEl.population + 1;
           pEl.population = newPopNumber;
+          var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) + Number(pEl.population);
+          HUDAuthorityNumber.innerText = newAuthorityNumber;
         }
         for (const pEl of allMiningPlanets) {
           var newMineralNumber = Number(HUDMineralNumber.innerText) + 10;
