--- a/generator.html
+++ b/generator.html
@@ -471,13 +471,13 @@
         survey();
       }
       
-      function designateMiningSystem {
+      function designateMiningSystem() {
         alert("you've designated this system as a Mining System");
       }
-      function designateTradeSystem {
+      function designateTradeSystem() {
         alert("you've designated this system as a Trade System");
       }
-      function designateProduceSystem {
+      function designateProduceSystem() {
         alert("you've designated this system as a Produce System");
       }
       
@@ -630,4 +630,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.174--->
+<!--Version 0.175--->
