--- a/generator.html
+++ b/generator.html
@@ -576,7 +576,7 @@
           sEl.style.height = sizeNumber * 4 + 70 + "px";
           sEl.style.width = sizeNumber * 4 + 70 + "px";
           sEl.addEventListener("onmouseenter", selectStar);
-          sEl.addEventListener("onmouseenter", preunselectStar);
+          sEl.addEventListener("onmouseout", preunselectStar);
         }
       }
       
