--- a/generator.html
+++ b/generator.html
@@ -575,8 +575,8 @@
           var sizeNumber = Number(Math.floor(Math.random() * 10) + 1);
           sEl.style.height = sizeNumber * 4 + 70 + "px";
           sEl.style.width = sizeNumber * 4 + 70 + "px";
-          sEl.addEventListener("onmouseenter", selectStar);
-          sEl.addEventListener("onmouseout", preunselectStar);
+          sEl.addEventListener("mouseenter", selectStar);
+          sEl.addEventListener("mouseout", preunselectStar);
         }
       }
       
@@ -630,4 +630,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.175--->
+<!--Version 0.177--->
