--- a/generator.html
+++ b/generator.html
@@ -224,11 +224,11 @@
     <div class="designationMenu" id="designationMenu">
       <div class="designationCell designationCaption"><span id="designationCaption"> Designation Choices </span></div>
       <div class="designationCell designationButton1"><button id="designationButton1" onclick="designateMiningSystem()"> Designate Mining System </button></div>
-      <div class="designationCell designationMineralIcon"><img id="designationSurveyIcon" src="surveyicon.png"></img></div>
+      <div class="designationCell designationMineralIcon"><img id="designationMineralIcon" src="gemstoneicon.png"></img></div>
       <div class="designationCell designationButton2"><button id="designationButton2" onclick="designateTradeSystem()"> Designate Trade System </button></div>
-      <div class="designationCell designationCreditIcon"><img id="designationMineralIcon" src="gemstoneicon.png"></img></div>
+      <div class="designationCell designationCreditIcon"><img id="designationCreditIcon" src="crediticon.png"></img></div>
       <div class="designationCell designationButton3"><button id="designationButton3" onclick="designateProduceSystem()"> Designate Produce System </button></div>
-      <div class="designationCell designationSupplyIcon"><img id="designationCreditIcon" src="crediticon.png"></img></div>
+      <div class="designationCell designationSupplyIcon"><img id="designationSupplyIcon" src="supplyicon.png"></img></div>
     </div>
     
     <script>
@@ -630,4 +630,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.177--->
+<!--Version 0.178--->
