--- a/generator.html
+++ b/generator.html
@@ -292,6 +292,10 @@
         el.style.padding = "1.5px";
         var button2 = $("menuButton2");
         var button3 = $("menuButton3");
+        button2.style.backgroundColor = "slateblue";
+        button3.style.backgroundColor = "slateblue";
+        button2.style.backgroundColor = "#9f97d1";
+        button3.style.backgroundColor = "#9f97d1";
         var miningPlanets = ["mineral1", "mineral2", "mineral3"];
         var colonizablePlanets = ["desert", "savanna", "arctic", "tundra", "continental", "ocean", "relic"];
         if (miningPlanets.includes(el.biome)) {
@@ -630,4 +634,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.181--->
+<!--Version 0.182--->
