--- a/generator.html
+++ b/generator.html
@@ -140,7 +140,7 @@
       
       .designationCell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
       .designationCell p { font-family: 'MedievalSharp', cursive; font-size:110%; }
-      .designationCaption { grid-area:designationCaption; }
+      .designationCaption { grid-area:designationCaption; text-align:center; }
       .designationCaption span { font-size:130%; text-align:center; }
       .designationButton1 { grid-area:designationButton1; }
       .designationButton2 { grid-area:designationButton2; }
