--- a/generator.html
+++ b/generator.html
@@ -132,8 +132,8 @@
         grid-template-columns: repeat(3, 1fr); grid-auto-rows: auto;
         grid-template-areas:
           "designationCaption  designationCaption  designationCaption"
-          "designationButton1  designationButton1  designationCreditIcon"
-          "designationButton2  designationButton2  designationMineralIcon"
+          "designationButton1  designationButton1  designatiomMineralIcon"
+          "designationButton2  designationButton2  designationCreditIcon"
           "designationButton3  designationButton3  designationSupplyIcon";
         gap: 1.75px; background: #1d4b96; transition:0.4s;
       }
@@ -145,8 +145,8 @@
       .designationButton1 { grid-area:designationButton1; }
       .designationButton2 { grid-area:designationButton2; }
       .designationButton3 { grid-area:designationButton3; }
-      .designationCreditIcon { grid-area:designationCreditIcon; }
       .designationMineralIcon { grid-area:designationMineralIcon; }
+      .designationCreditIcon { grid-area:designationCreditIcon; }
       .designationSupplyIcon { grid-area:designationSupplyIcon; }
       #designationMenu {  }
       #designationMineralIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
@@ -634,4 +634,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.182--->
+<!--Version 0.183--->
