--- a/generator.html
+++ b/generator.html
@@ -198,7 +198,7 @@
       <div class="cell size"><span id="surveySize"> [Size] </span></div>
       <div class="cell habit"><p id="surveyHabit"> [% Habitability] </p></div>
       <div class="cell desc"><p id="surveyDesc"> [desc] </p></div>
-      <div class="cell pop"><span> This planet contains </span><span id="surveyPop"> 0 </span><span> Population Units. </span></div>
+      <div class="cell pop"><span> This planet contains </span><span id="surveyPop"> 0 </span><span id="surveyPopStatus"> Population Units. </span></div>
       <div class="cell bottom"></div>
     </div>
     
@@ -382,6 +382,7 @@
           alert ("Unidentified planet")
         }
         $("surveyPop").innerText = el.population || 0;
+        $("suveyPopStatus").innerText = el.populationStatus;
       }
       function hideSurvey() {
         var el = $("info-box");
@@ -623,8 +624,8 @@
           }
           else {
             console.log("population exceeds planet limit");
-            var newPopStatus = pEl.population + " (Max) ";
-            pEl.population = newPopStatus;
+            var newPopStatus = " (Max) " + pEl.populationStatus;
+            pEl.populationStatus = newPopStatus;
           }
           var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) + Number(pEl.population);
           HUDAuthorityNumber.innerText = newAuthorityNumber;
@@ -641,4 +642,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.188--->
+<!--Version 0.120--->
