--- a/events.html
+++ b/events.html
@@ -145,17 +145,17 @@
     </div>
     
     <div class="preferenceMenu" id="preferenceMenu">
-      <div class="preferenceCell preferenceButton1"><img id="preferenceButton1" onclick="preferPlanet(this)" src="desertplanet1"></img></div>
+      <div class="preferenceCell preferenceButton1"><img id="preferenceButton1" onclick="preferPlanet(this)" src="desertplanet1.png"></img></div>
       <div class="preferenceCell preferenceCaption1"><span id="preferenceCaption1"> Desert Planet Preference </span></div>
-      <div class="preferenceCell preferenceButton2"><img id="preferenceButton2" onclick="preferPlanet(this)" src="savannaplanet1"></img></div>
+      <div class="preferenceCell preferenceButton2"><img id="preferenceButton2" onclick="preferPlanet(this)" src="savannaplanet1.png"></img></div>
       <div class="preferenceCell preferenceCaption2"><span id="preferenceCaption2"> Savanna Planet Preference </span></div>
-      <div class="preferenceCell preferenceButton3"><img id="preferenceButton3" onclick="preferPlanet(this)" src="arcticplanet1"></img></div>
+      <div class="preferenceCell preferenceButton3"><img id="preferenceButton3" onclick="preferPlanet(this)" src="arcticplanet1.png"></img></div>
       <div class="preferenceCell preferenceCaption3"><span id="preferenceCaption3"> Arctic Planet Preference </span></div>
-      <div class="preferenceCell preferenceButton4"><img id="preferenceButton4" onclick="preferPlanet(this)" src="tundraplanet1"></img></div>
+      <div class="preferenceCell preferenceButton4"><img id="preferenceButton4" onclick="preferPlanet(this)" src="tundraplanet1.png"></img></div>
       <div class="preferenceCell preferenceCaption4"><span id="preferenceCaption4"> Tundra Planet Preference </span></div>
-      <div class="preferenceCell preferenceButton5"><img id="preferenceButton5" onclick="preferPlanet(this)" src="continentalplanet1"></img></div>
+      <div class="preferenceCell preferenceButton5"><img id="preferenceButton5" onclick="preferPlanet(this)" src="continentalplanet1.png"></img></div>
       <div class="preferenceCell preferenceCaption5"><span id="preferenceCaption5"> Continental Planet Preference </span></div>
-      <div class="preferenceCell preferenceButton6"><img id="preferenceButton6" onclick="preferPlanet(this)" src="oceanplanet1"></img></div>
+      <div class="preferenceCell preferenceButton6"><img id="preferenceButton6" onclick="preferPlanet(this)" src="oceanplanet1.png"></img></div>
       <div class="preferenceCell preferenceCaption6"><span id="preferenceCaption6"> Ocean Planet Preference </span></div>
     </div>
     
@@ -220,4 +220,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.26--->
+<!--Version 0.27--->
