--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
         font-size:80%;
         border: 2px solid lightgray;
         border-radius: 5px;
-        display: inline-grid;
+        display: none;
         margin: 15px;
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 10px 70px 160px 50px 50px 10px;
@@ -62,7 +62,7 @@
         gap: 1.75px; background: #1d4b96; transition:0.4s;
       }
       
-      .planetPreferenceMenu { position:absolute; top:20px; left:20px; width: 240px; height: 140px; font-family: 'MedievalSharp', cursive; 
+      .preferenceMenu { position:absolute; top:20px; left:20px; width: 240px; height: 140px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: inline-grid; margin: 15px;
         grid-template-columns: repeat(4, 1fr); grid-auto-rows: auto;
         grid-template-areas:
