--- a/events.html
+++ b/events.html
@@ -108,6 +108,7 @@
       
       .preferenceCell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
       .preferenceCell p { font-family: 'MedievalSharp', cursive; font-size:40%; }
+      .preferenceCell span { font-family: 'MedievalSharp', cursive; font-size:40%; }
       .preferenceButton1 { grid-area:preferenceButton1; }
       .preferenceButton2 { grid-area:preferenceButton2; }
       .preferenceButton3 { grid-area:preferenceButton3; }
@@ -220,4 +221,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.30--->
+<!--Version 0.31--->
