--- a/events.html
+++ b/events.html
@@ -65,7 +65,7 @@
       
       .preferenceMenu { position:absolute; top:500px; left:20px; width: 440px; height: 135px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: inline-grid; margin: 15px;
-        grid-template-columns: repeat(4, 1fr); grid-auto-rows: auto;
+        grid-template-columns: 70px 150px 70px 150px; grid-auto-rows: auto;
         grid-template-areas:
           "preferenceButton1 preferenceCaption1  preferenceButton2 preferenceCaption2"
           "preferenceButton3 preferenceCaption3  preferenceButton4 preferenceCaption4"
@@ -224,4 +224,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.43--->
+<!--Version 0.45--->
