--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
           "preferenceButton1 preferenceCaption1  preferenceButton2 preferenceCaption2"
           "preferenceButton3 preferenceCaption3  preferenceButton4 preferenceCaption4"
           "preferenceButton5 preferenceCaption5  preferenceButton6 preferenceCaption6";
-        gap: 1.75px; background: #1d4b96; transition:0.4s;
+        gap: 1.75px; background: #1d4b96; transition:1.2s;
       }
       
       .cell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
@@ -210,6 +210,8 @@
           preferenceOcean = true;
         }
         var menu = document.getElementById("preferenceMenu");
+        menu.style.top = "0px";
+        menu.style.top = "0px";
         menu.parentNode.removeChild(menu);
       }
       
@@ -224,4 +226,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.45--->
+<!--Version 0.46--->
