--- a/events.html
+++ b/events.html
@@ -212,6 +212,12 @@
         var menu = document.getElementById("preferenceMenu");
         menu.style.top = "0px";
         menu.style.top = "0px";
+        setTimeout(function(){
+          deletePreferenceMenu();
+        },1100);
+      }
+      function deletePreferenceMenu() {
+        var menu = document.getElementById("preferenceMenu");
         menu.parentNode.removeChild(menu);
       }
       
@@ -226,4 +232,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.46--->
+<!--Version 0.47--->
