--- a/events.html
+++ b/events.html
@@ -210,8 +210,8 @@
           preferenceOcean = true;
         }
         var menu = document.getElementById("preferenceMenu");
-        menu.style.top = "0px";
-        menu.style.top = "0px";
+        menu.style.height = "0px";
+        menu.style.width = "0px";
         setTimeout(function(){
           deletePreferenceMenu();
         },1100);
@@ -232,4 +232,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.47--->
+<!--Version 0.48--->
