--- a/generator.html
+++ b/generator.html
@@ -732,13 +732,13 @@
         var newCreditNumber = Number(HUDCreditNumber.innerText) - allColonies.length * 10;
         HUDCreditNumber.innerText = newCreditNumber;
         for (const pEl of allColonies) {
-          if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1]) * 2 || pEl.satisfactoryPlanet == true) {
+          if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1]) * 2) || pEl.satisfactoryPlanet == true) {
             var newPopNumber = pEl.population + 1;
             pEl.population = newPopNumber;
             var newAuthorityNumber = (pEl.authority || 0) + 2;
             pEl.authority = newAuthorityNumber;
           }
-          else if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1]) * 2 || pEl.satisfactoryPlane != true) {
+          else if ((pEl.population || 0) < Number(pEl.randomSize.split(" ")[1] * 2) || pEl.satisfactoryPlane != true) {
             var newPopNumber = pEl.population + 1;
             pEl.population = newPopNumber;
             var newAuthorityNumber = (pEl.authority || 0) + 1;
@@ -769,4 +769,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.207--->
+<!--Version 0.208--->
